small fixes to page

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
         <script src="app.js"></script>
     </body>
-    <footer></footer>
+    <footer>    Sekiro: Shadows Die Twice is a Trademark of FromSoftware</footer>
     <main>
 
 </html>
