--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Tribute Page</title>
+    <title>Carousel Slider</title>
     <meta name="description" content="Basic tribute page">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,38 +26,44 @@
                     <p class="banner-note">The start of Lord Kuro's and Wolf's journey together</p>
                     <div class="synoposis-parent">
                         <img id="img-02" src="images/sekiro_2.jpg" alt="">
-                        <p id="synoposis-text">The time is Sengoku.<br><br>
+                        <container id="synoposis-text">
+                            <p>The time is Sengoku.<br><br>
 
-                            Japan is fractured into many independent nations entangled in ceaseless war.
-                            Beyond endless snowy peaks lies the land of Ashina - a realm rife with sacred earth and
-                            ancient
-                            mystery.
-                            For years the Ashina were overrun by invaders and forced to serve foreign lords.<br><br>
+                                Japan is fractured into many independent nations entangled in ceaseless war.
+                                Beyond endless snowy peaks lies the land of Ashina - a realm rife with sacred earth and
+                                ancient
+                                mystery.
+                                For years the Ashina were overrun by invaders and forced to serve foreign lords.<br><br>
 
-                            That is until twenty years ago, when Sword Saint Isshin Ashina ignited a bloody coup to
-                            retake
-                            his homeland. Isshin's skill with a blade was unrivaled, and he inspired fierce loyalty in
-                            his
-                            countrymen. Under his leadership Ashina was reclaimed by it's rightful rulers and a new time
-                            of
-                            peace began.
-                            But now, Ashina once again faces an invasive threat. One more powerful than any before
-                            it.<br><br>
+                                That is until twenty years ago, when Sword Saint Isshin Ashina ignited a bloody coup to
+                                retake
+                                his homeland. Isshin's skill with a blade was unrivaled, and he inspired fierce loyalty
+                                in
+                                his
+                                countrymen. Under his leadership Ashina was reclaimed by it's rightful rulers and a new
+                                time
+                                of
+                                peace began.
+                                But now, Ashina once again faces an invasive threat. One more powerful than any before
+                                it.<br><br>
 
-                            The Interior Ministry has set it's sights on Ashina and will stop at nothing to unify all of
-                            Japan under one banner. Genichiro Ashina, Isshin's grandson, has assumed command and
-                            desperately
-                            searches for a means to defend his home.
-                            Soon though, he realizes the inevitable: “Ashina cannot be defended by normal means, not
-                            anymore.”<br><br>
+                                The Interior Ministry has set it's sights on Ashina and will stop at nothing to unify
+                                all of
+                                Japan under one banner. Genichiro Ashina, Isshin's grandson, has assumed command and
+                                desperately
+                                searches for a means to defend his home.
+                                Soon though, he realizes the inevitable: “Ashina cannot be defended by normal means, not
+                                anymore.”<br><br>
 
-                            And so the Divine Heir is kidnapped,<br><br>
+                                And so the Divine Heir is kidnapped,<br><br>
 
-                            alone in the world save for a single shinobi.<br><br>
-                            His loyal wolf - Sekiro.<br><br>
+                                alone in the world save for a single shinobi.<br><br>
+                                His loyal wolf - Sekiro.<br><br>
 
-                            This is a tale of a Lord and his Retainer, and their journey to return balance to the land.
-                        </p>
+                                This is a tale of a Lord and his Retainer, and their journey to return balance to the
+                                land.
+                            </p>
+                        </container>
                     </div>
                 </div>
                 <div class="slide">
@@ -140,8 +146,8 @@
                     <p class="banner-note">A quick summary of Sekiro's development</p>
                     <div class="History-parent">
                         <img src="images/sekiro_5.jpg" alt="">
-                        <p>
-                            Development of Sekiro began in late 2015 following the completion of Bloodborne's 
+                        <p id="history-text">
+                            Development of Sekiro began in late 2015 following the completion of Bloodborne's
                             downloadable content,
                             The Old Hunters. The game was revealed via a teaser trailer at The Game Awards 2017 in
                             December, showing
@@ -183,7 +189,7 @@
                     <p class="banner">Gameplay</p>
                     <p class="banner-note">A look at how Sekiro strays away from other FromSoftware titles</p>
                     <div class="gameplay-parent">
-                        <p>
+                        <p id="gameplay-text">
                             Sekiro: Shadows Die Twice is an action-adventure game played from a third-person view.
                             Compared to
                             FromSoftware's Souls series, the game features fewer role-playing elements, lacking
@@ -211,11 +217,10 @@
                 </div>
             </div>
             <a class="prev">&#10094;</a>
-            <a class="next"> &#10095;</a>    
+            <a class="next"> &#10095;</a>
         </div>
         <script src="app.js"></script>
     </body>
-    <footer>    Sekiro: Shadows Die Twice is a Trademark of FromSoftware</footer>
+    <footer> Sekiro: Shadows Die Twice is a Trademark of FromSoftware</footer>
     <main>
-
 </html>
